// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NavList isOpenがfalseの時に\`.nav-list\`が非表示 1`] = `
"<div>
  <transition-stub name=\\"nav-fade\\">
    <div class=\\"nav-list\\" style=\\"display: none;\\">
      <ul>
        <li>
          <div>
            <div class=\\"nav-item\\"><a class=\\"base-link--extend\\"><img src=\\"http://placehold.jp/150x150.png\\" alt=\\"ダミー1の画像\\" class=\\"base-img--extend base-img--lg\\">
                <p class=\\"base-text--extend\\">ダミー1</p>
              </a></div>
          </div>
        </li>
        <li>
          <div>
            <div class=\\"nav-item\\"><a class=\\"base-link--extend\\"><img src=\\"http://placehold.jp/150x150.png\\" alt=\\"ダミー2の画像\\" class=\\"base-img--extend base-img--lg\\">
                <p class=\\"base-text--extend\\">ダミー2</p>
              </a></div>
          </div>
        </li>
        <li>
          <div>
            <div class=\\"nav-item\\"><a class=\\"base-link--extend\\"><img src=\\"http://placehold.jp/150x150.png\\" alt=\\"ダミー3の画像\\" class=\\"base-img--extend base-img--lg\\">
                <p class=\\"base-text--extend\\">ダミー3</p>
              </a></div>
          </div>
        </li>
        <li>
          <div>
            <div class=\\"nav-item\\"><a class=\\"base-link--extend\\"><img src=\\"http://placehold.jp/150x150.png\\" alt=\\"ダミー4の画像\\" class=\\"base-img--extend base-img--lg\\">
                <p class=\\"base-text--extend\\">ダミー4</p>
              </a></div>
          </div>
        </li>
      </ul>
    </div>
  </transition-stub>
</div>"
`;

exports[`NavList isOpenがtrueの時に\`.nav-list\`が表示 1`] = `
"<div>
  <transition-stub name=\\"nav-fade\\">
    <div class=\\"nav-list\\">
      <ul>
        <li>
          <div>
            <div class=\\"nav-item\\"><a class=\\"base-link--extend\\"><img src=\\"http://placehold.jp/150x150.png\\" alt=\\"ダミー1の画像\\" class=\\"base-img--extend base-img--lg\\">
                <p class=\\"base-text--extend\\">ダミー1</p>
              </a></div>
          </div>
        </li>
        <li>
          <div>
            <div class=\\"nav-item\\"><a class=\\"base-link--extend\\"><img src=\\"http://placehold.jp/150x150.png\\" alt=\\"ダミー2の画像\\" class=\\"base-img--extend base-img--lg\\">
                <p class=\\"base-text--extend\\">ダミー2</p>
              </a></div>
          </div>
        </li>
        <li>
          <div>
            <div class=\\"nav-item\\"><a class=\\"base-link--extend\\"><img src=\\"http://placehold.jp/150x150.png\\" alt=\\"ダミー3の画像\\" class=\\"base-img--extend base-img--lg\\">
                <p class=\\"base-text--extend\\">ダミー3</p>
              </a></div>
          </div>
        </li>
        <li>
          <div>
            <div class=\\"nav-item\\"><a class=\\"base-link--extend\\"><img src=\\"http://placehold.jp/150x150.png\\" alt=\\"ダミー4の画像\\" class=\\"base-img--extend base-img--lg\\">
                <p class=\\"base-text--extend\\">ダミー4</p>
              </a></div>
          </div>
        </li>
      </ul>
    </div>
  </transition-stub>
</div>"
`;
